@@ -67,8 +67,7 @@ public class SecurityConfig {
                                 configuration.setAllowedHeaders(Collections.singletonList("*"));
                                 configuration.setMaxAge(3600L);
 //                                configuration.setExposedHeaders(Collections.singletonList("Authorization"));
-                                configuration.setAllowedHeaders(List.of("*"));
-                                configuration.setExposedHeaders(List.of("*"));
+                                configuration.setExposedHeaders(Collections.singletonList("*"));
 
                                 return configuration;
                             }
